<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#dfdffe"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/monday"
                android:textAlignment="center"></TextView>

            <ImageView
                android:layout_width="0px"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:src="@drawable/partly_cloudy">

            </ImageView>

            <LinearLayout
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:orientation="vertical"
                android:textAlignment="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0px"
                    android:layout_weight="1"
                    android:text="@string/partly_cloudy"
                    android:textColor="#000000">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0px"
                    android:layout_weight="1"
                    android:text="24C-31C"
                    android:textColor="#000000"></TextView>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/tuesday"
                android:textAlignment="center"></TextView>

            <ImageView
                android:layout_width="0px"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:src="@drawable/rain">

            </ImageView>

            <LinearLayout
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:orientation="vertical"
                android:textAlignment="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0px"
                    android:layout_weight="1"
                    android:text="@string/showers"
                    android:textColor="#000000">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0px"
                    android:layout_weight="1"
                    android:text="24C-30C"
                    android:textColor="#000000">

                </TextView>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/wednesday"
                android:textAlignment="center"></TextView>

            <ImageView
                android:layout_width="0px"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:src="@drawable/rain">

            </ImageView>

            <LinearLayout
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:orientation="vertical"
                android:textAlignment="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0px"
                    android:layout_weight="1"
                    android:text="@string/rain"
                    android:textColor="#000000">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0px"
                    android:layout_weight="1"
                    android:text="22C-23C"
                    android:textColor="#000000">

                </TextView>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/tuesday"
                android:textAlignment="center"></TextView>

            <ImageView
                android:layout_width="0px"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:src="@drawable/rain_sun">

            </ImageView>

            <LinearLayout
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:orientation="vertical"
                android:textAlignment="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0px"
                    android:layout_weight="1"
                    android:text="@string/scattered_showers"
                    android:textColor="#000000">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0px"
                    android:layout_weight="1"
                    android:text="22C-27C"
                    android:textColor="#000000">

                </TextView>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/thursday"
                android:textAlignment="center"></TextView>

            <ImageView
                android:layout_width="0px"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:src="@drawable/partly_cloudy">

            </ImageView>

            <LinearLayout
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:orientation="vertical"
                android:textAlignment="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0px"
                    android:layout_weight="1"
                    android:text="@string/mostly_cloudy"
                    android:textColor="#000000">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0px"
                    android:layout_weight="1"
                    android:text="22C-30C"
                    android:textColor="#000000"></TextView>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/saturday"
                android:textAlignment="center"></TextView>

            <ImageView
                android:layout_width="0px"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:src="@drawable/partly_cloudy">

            </ImageView>

            <LinearLayout
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:orientation="vertical"
                android:textAlignment="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0px"
                    android:layout_weight="1"
                    android:text="@string/partly_cloudy"
                    android:textColor="#000000">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0px"
                    android:layout_weight="1"
                    android:text="24C-31C"
                    android:textColor="#000000"></TextView>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/sunday"
                android:textAlignment="center"></TextView>

            <ImageView
                android:layout_width="0px"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:src="@drawable/storm">

            </ImageView>

            <LinearLayout
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:orientation="vertical"
                android:textAlignment="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0px"
                    android:layout_weight="1"
                    android:text="@string/thunderstorms"
                    android:textColor="#000000">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0px"
                    android:layout_weight="1"
                    android:text="25C-28C"
                    android:textColor="#000000"></TextView>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</FrameLayout>